<resources>
    <string name="app_name">PyTorchDemo</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_skip_button">Skip</string>
    <string name="main_vision_button">Vision</string>


    <string name="vision_list_detect_document_button">Detect Document</string>
    <string name="detect_document_title">Detect Document</string>
    <string name="detect_document_results_header_row_name">Detection</string>
    <string name="detect_document_results_header_row_score">Score</string>

    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_description">PyTorch mobile demo application for documnet detection</string>

    <string name="welcome_page_detect_document_title">Detect Document</string>
    <string name="welcome_page_detect_document_description">Detect document using output of camera</string>

    <string name="vision_card_quantized_title">Detect document (Quantized)</string>
    <string name="vision_card_quantized_description">Inference in int8.\nInput is float32 tensor of 1x3x32x32 shape</string>

    <string name="vision_card_normal_title">Detect document (Normal)</string>
    <string name="vision_card_normal_description">Input is float32 tensor of 1x3x32x32 shape</string>

    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="error_dialog_text">Sorry there was an error.</string>

</resources>
